# desk-rail

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
desk_rail/: boot.py  hooks.py  modules.txt
desk_rail/desk_rail/doctype/desk_rail_settings/: desk_rail_settings.js  desk_rail_settings.json  desk_rail_settings.py
desk_rail/fixtures/: custom_field.json
desk_rail/public/css/: desk_rail.css
desk_rail/public/js/: desk_rail.js
