[project]
name = "desk_rail"
authors = [
    { name = "BatchNepal", email = "support@batchnepal.com" },
]
description = "A persistent workspace navigation rail and instant-redirect navigation for the Frappe/ERPNext desk."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []
license = "AGPL-3.0-or-later"
keywords = ["frappe", "erpnext", "desk", "sidebar", "navigation", "workspace", "ui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Frappe",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 (AGPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business",
]

[project.urls]
Homepage = "https://github.com/BatchNepal/desk-rail"
Repository = "https://github.com/BatchNepal/desk-rail"
Issues = "https://github.com/BatchNepal/desk-rail/issues"
Changelog = "https://github.com/BatchNepal/desk-rail/blob/main/CHANGELOG.md"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "desk_rail"

[tool.bench.frappe-dependencies]
frappe = ">=14.0.0,<16.0.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "RUF"]
ignore = [
    "B017", "B018", "B023", "B904",
    "E101", "E402", "E501", "E741",
    "F401", "F403", "F405", "F722",
    "W191",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
